--- a/app/views/todos/edit.html.erb
+++ b/app/views/todos/edit.html.erb
@@ -1,6 +1,1 @@
-<%= form_with model: @todo, local: true do |f| %>
-  <%= f.label :description, "Task Description:" %>
-  <%= f.text_area :description %>
-
-  <%= f.submit 'Submit'  %>
-<% end %>
+<%= render 'form' %>
