--- a/app/views/todos/list.html.erb
+++ b/app/views/todos/list.html.erb
@@ -1,23 +1,34 @@
 <div class="row">
 
   <div class="col-md-6">
+
     <% @todos.each do |ele| %>
+
       <% if ele.completed %>
-      <h3> <%= ele.id %> </h3>
-      <h4> <%= ele.description %> </h4>
-      <p> <%= ele.completed %> </p>
-      <br>
-      <br>
+        <h3> <%= ele.id %> </h3>
+        <h4> <%= ele.description %> </h4>
+        <p> <%= ele.completed %> </p>
+        <br>
+        <br>
+      <% end  %>
+
     <% end  %>
+
   </div>
 
   <div class="col-md-6">
-    <% if !(ele.completed) %>
-    <h3> <%= ele.id %> </h3>
-    <h4> <%= ele.description %> </h4>
-    <p> <%= ele.completed %> </p>
-    <br>
-    <br>
+
+    <% @todos.each do |ele| %>
+
+      <% if !(ele.completed) %>
+        <h3> <%= ele.id %> </h3>
+        <h4> <%= ele.description %> </h4>
+        <p> <%= ele.completed %> </p>
+        <br>
+        <br>
+      <% end  %>
+
+    <% end  %>
 
   </div>
 
