--- a/app/views/todos/_form.html.erb
+++ b/app/views/todos/_form.html.erb
@@ -1,9 +1,43 @@
-<%= form_with model: @todo, local: true do |f| %>
-  <%= f.label :description, "Task Description:" %>
-  <%= f.text_area :description %>
-  
-  <%= f.label :completed, "Completed" %>
-  <%= f.check_box :completed  %>
 
-  <%= f.submit 'Submit'  %>
+
+
+
+
+  <%= form_with model: @todo, local: true do |f| %>
+
+  <div class="row">
+
+    <div class="col-md-4 col-md-offset-4 text-center">
+
+      <%= f.label :description, "Task Description:" %>
+      <%= f.text_area :description %>
+
+    </div>
+
+  </div>
+
+  <div class="row">
+
+    <div class="col-md-4 col-md-offset-4 text-center">
+
+      <%= f.label :completed, "Completed" %>
+      <%= f.check_box :completed  %>
+
+    </div>
+
+  </div>
+
+  <div class="row">
+
+    <div class="col-md-4 col-md-offset-4 text-center">
+
+        <%= f.submit 'Submit'  %>
+
+    </div>
+
+</div>
+
+<br>
+
+
 <% end %>
