--- a/app/views/todos/show.html.erb
+++ b/app/views/todos/show.html.erb
@@ -1,4 +1,34 @@
 
-<h3> Task ID: <%= @todo.id %> </h3>
-<h1> Task Description: <%= @todo.description %> </h1>
-<p> Completed? : <%= @todo.completed %> </p>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+
+
+
+<table class="table table-striped panel panel-primary">
+  <tbody>
+    <tr>
+      <td> <h3> Task ID: </h3> </td>
+      <td> <p> <%= @todo.id %> </p> </td>
+    </tr>
+    <tr>
+      <td> <h3> Description: </h3> </td>
+      <td> <p> <%= @todo.description %> </p> </td>
+    </tr>
+    <tr>
+      <td> <h3> Completed? </h3> </td>
+      <td>
+      <% if @todo.completed  %>
+        <p> Task Completed </p>
+      <% else  %>
+        <p> Task Not Completed </p>
+      <% end  %>
+      </td>
+    </tr>
+
+  </tbody>
+
+</table>
+
+</div>
+
+</div>
