--- a/app/views/todos/_form.html.erb
+++ b/app/views/todos/_form.html.erb
@@ -31,7 +31,7 @@
 
     <div class="col-md-4 col-md-offset-4 text-center">
 
-        <%= f.submit 'Submit'  %>
+        <%= f.submit 'Submit', class:"btn btn-danger"  %>
 
     </div>
 
