--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -28,6 +28,16 @@
 
 .my_footer{
   background-color: #f9a825;
+}
 
+body{
+  background-color: lightgrey;
 
+}
+
+footer {
+    position: fixed;
+    height: 100px;
+    bottom: 20px;
+    width: 100%;
 }
